--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="tr">
   <head>
@@ -82,6 +83,7 @@
     "tailwind-merge": "https://esm.sh/tailwind-merge@2.2.1",
     "@radix-ui/react-tooltip": "https://esm.sh/@radix-ui/react-tooltip@1.0.7?deps=react@18.2.0,react-dom@18.2.0",
     "uuid": "https://esm.sh/uuid@^13.0.0",
+    "@tanstack/react-table": "https://esm.sh/@tanstack/react-table@8.13.2?deps=react@18.2.0,react-dom@18.2.0",
     "@google/genai": "https://esm.sh/@google/genai@^1.33.0"
   }
 }
