--- a/index.html
+++ b/index.html
@@ -84,7 +84,9 @@
     "@radix-ui/react-tooltip": "https://esm.sh/@radix-ui/react-tooltip@1.0.7?deps=react@18.2.0,react-dom@18.2.0",
     "uuid": "https://esm.sh/uuid@^13.0.0",
     "@tanstack/react-table": "https://esm.sh/@tanstack/react-table@8.13.2?deps=react@18.2.0,react-dom@18.2.0",
-    "@google/genai": "https://esm.sh/@google/genai@^1.33.0"
+    "@google/genai": "https://esm.sh/@google/genai@^1.33.0",
+    "react-window": "https://esm.sh/react-window@1.8.10?deps=react@18.2.0,react-dom@18.2.0",
+    "react-virtualized-auto-sizer": "https://esm.sh/react-virtualized-auto-sizer@1.0.24?deps=react@18.2.0,react-dom@18.2.0"
   }
 }
 </script>
